source/objects/Order_Fulfillment_Event__e.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SF_Order_ID__c</fullName>
        <label>SF Order ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_System__c</fullName>
        <label>Source System</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_ID__c</fullName>
        <label>Transaction ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Timestamp__c</fullName>
        <label>Transaction Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Transaction_Type__c</fullName>
        <label>Transaction Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Order Fulfillment Event</label>
    <pluralLabel>Order Fulfillment Events</pluralLabel>
</CustomObject>